# splatter

./: .gitignore  AUDIT_REPORT.md  BUILD_PLAN.md  BUILD_PLAN_PHASES.md  Cargo.toml  SKETCH.md  SPRINT2_PLAN.md  TEST_PLAN.md
.github/workflows/: ci.yml
resources/profiles/: pi-agent.yaml
splatter-core/: Cargo.toml
splatter-core/src/: lib.rs
splatter-core/src-tauri/: Cargo.toml  tauri.conf.json
splatter-core/src-tauri/src/: agent_commands.rs  config_commands.rs  layout_commands.rs  main.rs  plugin_commands.rs
splatter-core/src/agent/: mod.rs
splatter-core/src/config/: mod.rs
splatter-core/src/crash/: mod.rs
splatter-core/src/hotkey/: mod.rs
splatter-core/src/layout/: mod.rs
splatter-core/src/notification/: mod.rs
splatter-core/src/plugin/: mod.rs
splatter-core/src/tray/: mod.rs
splatter-core/src/utils/: mod.rs
splatter-core/src/window/: mod.rs
web/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
web/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
web/src/components/: AgentList.tsx  ErrorBoundary.tsx  Layout.tsx  PluginList.tsx  Settings.tsx  StatusBar.tsx
web/src/components/Ghostty/: GhosttyTerminal.tsx
web/src/hooks/: useGhostty.ts
web/src/stores/: agentStore.ts  layoutStore.ts  settingsStore.ts
web/src/types/: ghostty-web.d.ts  index.ts
