[package]
name = "splatter-core"
version = "0.1.0"
edition = "2021"
description = "Splatter agent-aware terminal multiplexer core library"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
parking_lot = "0.12"
toml = "0.8"
dirs = "5"
rustix = { version = "0.38", features = ["process", "pty", "termios", "fs"] }
nix = { version = "0.29", features = ["signal", "process", "term", "fs"] }
rand = "0.8"
globset = "0.4"
libc = "0.2"
serde_yaml = "0.9"

[dev-dependencies]
tempfile = "3"
